# oscillo

./: CMakeLists.txt  README.md  commonheader.h  out.txt
ardu/debug-osc/: debug-osc.ino
ardu/fast-osc/: fast-osc.ino
ardu/fast-osc-mukodik/: fast-osc-mukodik.ino
ardu/fast-osc2/: fast-osc2.ino
ardu/fast-triggered/: fast-triggered.ino
ardu/fos-osc/: fos-osc.ino
ardu/girino.next0to0buffer/: girino.next0to0buffer.ino
ardu/girino.packet/: girino.packet.ino
ardu/girino.pak.run/: commonheader.h  girino.pak.run.ino
ardu/girino.pak.trig/: girino.pak.trig.ino
ardu/girino.pwm.ADC.AC/: girino.pwm.ADC.AC.ino
ardu/osc/: osc.ino
ardu/processing.kliensek/fos_cliens/: fos_cliens.pde
ardu/processing.kliensek/osc_pcside/: osc_pcside.pde
ardu/processing.kliensek/osc_pcside_trig/: osc_pcside_trig.pde
ardu/test.continous.ADC/: test.continous.ADC.ino
ardu/test_comparator/: test_comparator.ino
ardu/test_packet_trans/: test_packet_trans.ino
ardu/test_transmission/: test_transmission.ino
arduscopeclient/: binaryfromtty.c
mylibs/: csimpTTY.cpp  csimpTTY.h  isdl.cpp  liblog.h
oscilloscope/: ttyscope.cpp
pc/: CMakeLists.txt  b.sh  log.txt  rb.sh
pc-side/: CMakeLists.txt  cmakebuild.sh
pc-side/mylibs/: csimpTTY.cpp  csimpTTY.h  liblog.cpp
pc-side/readUSBserial/: binaryfromtty.c
pc-side/test_apps/: test_csimpTTY.cpp  test_isdl.cpp
pc/mylibs/: CMakeLists.txt  csimpGUI.cpp  csimpGUI.h  csimpLog.cpp  csimpLog.h  csimpSDL.cpp  csimpSDL.h  csimpTTY.cpp  csimpTTY.h  isdl.h  liblog.h
pc/src/: CMakeLists.txt  oscsdla.cpp  test_0to0buffer.cpp  test_0to0ncurses.cpp  test_csimpTTY.cpp  testgui.cpp  testquadtree.cpp  testsdl.cpp
pc/test_apps/: test_0to0ncurses.cpp
processing/flow_in_buffer_client/: flow_in_buffer_client.pde
processing/fos_cliens/: fos_cliens.pde
processing/osc_pcside/: osc_pcside.pde
processing/osc_pcside2/: osc_pcside.pde
processing/osc_pcside_bufferuntil0/: osc_pcside_bufferuntil0.pde
processing/osc_pcside_trig/: osc_pcside_trig.pde
processing/plot_cont_ADC/: plot_cont_ADC.pde
test_apps/: test_csimpTTY.cpp  test_liblog.cpp
